# y2y-spatial-library

./: .gitignore  CHEATSHEET.html  CHEATSHEET.md  COMMAND_REFERENCE.html  COMMAND_REFERENCE.md  DEPLOYMENT.md  DESIGN.md  ONBOARDING_WINDOWS.md  README.md  Spatial_Data_Typology.xlsx  pyproject.toml
inventory/: changelog.md
pipeline/: __init__.py  __main__.py  agol_config.py  agol_sync.py  agol_thumbnails.py  agol_vtpk.py  db.py  export_xlsx.py  ingest.py  inventory_manager.py  lifecycle.py  pending_sheet.py  reconcile.py  schema.sql  source_formats.py  taxonomy.py  transformations.py  utils.py
pipeline/migrations/: 001_xlsx_to_sqlite.py  002_library_spatial_restructure.py  003_archive_rename_to_ulid.py  004_gb_rasters_recategorize.py  005_purge_phase6_verification_artifacts.py  006_typology_2026_revision.py  007_agol_target_column.py  008_rename_agol_target_to_agol_format.py  009_agol_adopt_existing.py  010_typology_2026_midyear.py  __init__.py
pipeline/validators/: __init__.py  crs.py  format.py  naming.py
scripts/: new_data_root.ps1  setup_windows.ps1  update_windows.ps1
tests/: conftest.py  test_agol_push.py  test_agol_sync.py  test_agol_thumbnails.py  test_agol_vtpk.py  test_cli_fix_renames.py  test_cli_root.py  test_ingest_approve.py  test_ingest_scan.py  test_inventory_manager.py  test_lifecycle.py  test_reconcile.py  test_source_formats.py  test_taxonomy.py  test_transformations.py  test_utils.py  test_validators_format.py  test_validators_naming.py
