[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y2y-spatial-library"
version = "0.1.0"
description = "Pipeline tooling for the Yellowstone to Yukon (Y2Y) authoritative spatial data library."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Y2Y Conservation Initiative" },
]
license = { text = "Proprietary" }
dependencies = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "fiona>=1.9",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "python-ulid>=2.0",
    # AGOL integration (see DESIGN.md §15). arcgis pulls in the Esri
    # Python SDK for authentication + item management + publish flows.
    # matplotlib backs pipeline/agol_thumbnails.py.
    #
    # The rev 3 Vector Tile Layer pipeline (manual VTPK + ingest) is
    # arcpy-free: the steward builds .vtpk files manually in ArcGIS
    # Pro's UI and drops them in queue/incoming/; pipeline ingest
    # picks them up. Pipeline runtime is pure pip, runs on any OS.
    "arcgis>=2.3",
    "matplotlib>=3.8",
    # Required by arcgis.raster.publish_hosted_imagery_layer for
    # uploading TIFFs to AGOL's raster store (Azure blob backend).
    # Version pin matches the range arcgis 2.3+ supports — outside
    # this range the upload_imagery_to_agol_userstore call errors.
    "azure-storage-blob>=12.1,<=12.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
y2y = "pipeline.__main__:cli"

[tool.setuptools.packages.find]
include = ["pipeline*"]
exclude = ["tests*", "library*", "queue*", "inventory*", "reports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
